# next_agent

./: .gitignore  README.md  README.org  flake.nix  main.py  pyproject.toml
next_agent/: agent.py  agent_base.py  command.py  memory.py  search.py  stt.py  tool.py  tts.py  vars.py
tests/: test_agent.py
tools/: agent_code_query.json  append_agenda.json  create_bash_tool.json  email_query.json  git_add_from_repo.json  git_checkout_branch.json  git_commit_from_repo.json  git_log_dir.json  git_log_monorepo.json  git_read_patch.json  git_status.json  git_switch_branch.json  git_view_branches.json  list_directory.json  monorepo_query.json  mpc_playlist.json  mpc_status.json  mu_find.json  web_search.json
