[project]
name = "next-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Preston Pan",email = "ret2pop@nullring.xyz"}
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "langchain (>=1.2.15,<2.0.0)",
    "langchain-ollama (>=1.1.0,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "prompt-toolkit (>=3.0.52,<4.0.0)",
    "googlesearch-python (>=1.3.0,<2.0.0)",
    "ddgs (>=9.14.0,<10.0.0)",
    "tavily-python (>=0.7.23,<0.8.0)",
    "faiss-cpu (>=1.13.2,<2.0.0)",
    "torch (>=2.11.0,<3.0.0)",
    "qwen-tts (>=0.1.1,<0.2.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "py-qwen3-tts-cpp @ git+https://github.com/femelo/py-qwen3-tts-cpp",
    "kokoro (>=0.9.4,<0.10.0)",
    "ipython (>=9.12.0,<10.0.0)",
    "sounddevice (>=0.5.5,<0.6.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "faster-whisper (>=1.2.1,<2.0.0)",
    "scipy (>=1.17.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
